[package]
name = "root"
version = "0.1.0"
edition = "2024"

[dependencies]
# system
common = {path = "../../crates/common"}
net = {path = "../../crates/net"}

# external
tokio = { version = "1", features = ["full"] }
metrics = "0.24.2"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
